added dropdown to select covering

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">LEAF3</string>
+
+    <string name="covering_no_selection">Select a covering</string>
+    <string name="covering">Covering</string>
+
+    <string-array name="covering_array">
+        <item>Opaque</item>
+        <item>Transparent</item>
+        <item>Standard</item>
+        <item>None</item>
+    </string-array>
+
+    <string name="result">Result</string>
+
+
+
+
 </resources>
